# emotion-recognition-using-speech

./: pyproject.toml
