[tool.poetry]
name = "emotion-recognition-using-speech"
version = "0.1.0"
description = ""
authors = ["Tatsuya-Ueda <74095322+Tatsuya-Ueda@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "emotion_recognition_using_speech"}]

[tool.poetry.dependencies]
python = "3.7.0"
protobuf = "3.20.0"
tensorflow = "1.14.0"
numpy = "1.16.4"
pandas = "1.1.5"
scikit-learn = "1.0.2"
tqdm = "^4.65.0"
matplotlib = "3.4.3"
soundfile = "^0.12.1"
librosa = "0.6.3"
pyaudio = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
